--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -24,7 +24,7 @@
                         src="{{this.imagePath}}"></div>
                 <figcaption class="info-wrap">
                     <h4 class="title">{{this.title}}</h4>
-                    <p class="desc">Some small description goes here</p>
+                    <p class="desc">{{this.description}}</p>
                     <div class="rating-wrap">
                         
                     </div> <!-- rating-wrap.// -->
