--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,13 +1,18 @@
 <header class="header sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm">
-        <div class="container"><a class="navbar-brand" href="#">
+        <div class="container"><a class="navbar-brand" href="/">
             <strong class="h6 mb-0 font-weight-bold text-uppercase">Ghar Pe</strong></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a class="nav-link" href="#">Shopping Cart <span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">My Account</a></li>
-                    <!--<li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>--->
+                    {{#if login }}
+                    <li class="nav-item"><a class="nav-link" href="/user/profile">My Account</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/user/logout">Logout</a></li>
+                    {{ else }}
+                        <li class="nav-item"><a class="nav-link" href="/user/signup">Sign Up</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/user/signin">Sign In</a></li>
+                    {{/if}}
                 </ul>
             </div>
         </div>
