--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,3 +42,11 @@
 .card-product .price-old {
   color: #999;
 }
+
+footer {
+  background: #343a40;
+  padding: 40px;
+}
+footer a {
+  color: #f8f9fa!important
+}
