--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -30,7 +30,7 @@
                     </div> <!-- rating-wrap.// -->
                 </figcaption>
                 <div class="bottom-wrap">
-                    <a href="" class="btn btn-sm btn-primary float-right">Add to Cart</a>
+                    <a href="/add-to-cart/{{this._id}}" class="btn btn-sm btn-primary float-right">Add to Cart</a>
                     <div class="price-wrap h5">
                         <span class="price-new">₹{{this.price}}</span>
                     </div> <!-- price-wrap.// -->
