--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -13,6 +13,7 @@
 <body>
   {{> header}}
   {{{body}}}
+  {{> footer  }}
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
