--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,7 +5,10 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#">Shopping Cart <span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/shopping-cart">
+                            Shopping Cart <span class="sr-only">(current)</span><span class="badge badge-secondary">{{session.cart.totalQty}}</span>
+                            </a></li>
                     {{#if login }}
                     <li class="nav-item"><a class="nav-link" href="/user/profile">My Account</a></li>
                     <li class="nav-item"><a class="nav-link" href="/user/logout">Logout</a></li>
