--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -4,7 +4,7 @@
             <h1 class="display-4">Ghar Pe</h1>
             <p class="font-italic mb-1">The Grocery Store you need, for all your needs</p><br>
             <button class="btn btn-transparent-white">
-                <a class="text-white" href="#">
+                <a class="text-white" href="#main-container">
                     Shop Now
                 </a>
             </button>
@@ -13,15 +13,16 @@
     </div>
 </section><br><br>
 <!---thumbnails--->
-<div class="container">
-
+<div class="container" id="main-container">
+    <h1>Get the Best Deals</h1>
+    <hr><br>
     {{# each products }}
     <div class="row">
         {{# each this }}
         <div class="col-md-4">
             <figure class="card card-product">
                 <div class="img-wrap"><img
-                        src="{{this.imagePath}}"></div>
+                        src="{{this.imagePath}}" style="height:200px;"></div>
                 <figcaption class="info-wrap">
                     <h4 class="title">{{this.title}}</h4>
                     <p class="desc">{{this.description}}</p>
@@ -30,7 +31,7 @@
                     </div> <!-- rating-wrap.// -->
                 </figcaption>
                 <div class="bottom-wrap">
-                    <a href="/add-to-cart/{{this._id}}" class="btn btn-sm btn-primary float-right">Add to Cart</a>
+                    <a href="/add-to-cart/{{this._id}}" class="btn btn-sm btn-success float-right">Add to Cart</a>
                     <div class="price-wrap h5">
                         <span class="price-new">₹{{this.price}}</span>
                     </div> <!-- price-wrap.// -->
