--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -23,14 +23,22 @@
                     <tbody>
                         <tr>
                             {{#each products}}
-                            <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
+                            <td><img src="{{this.item.imgPath}}" /> </td>
                             <td>{{this.item.title}}</td>
                             <td>In stock</td>
-                            <td><input class="form-control" type="text" value="{{this.qty}}" /></td>
+                            <td><input class="form-control" type="text" value="{{this.qty}}" disabled/></td>
                             <td class="text-right">₹{{this.price}}</td>
                             <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
                         </tr>
                         {{/each}}
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><strong>Total</strong></td>
+                            <td class="text-right"><strong>₹{{totalPrice}}</strong></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -41,7 +49,7 @@
                     <a href="/"><button class="btn btn-block btn-light">Continue Shopping</button></a>
                 </div>
                 <div class="col-sm-12 col-md-6 text-right">
-                    <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
+                    <a href="/checkout"><button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button></a>
                 </div>
             </div>
         </div>
@@ -55,4 +63,3 @@
 </div>
 {{/if}}
 
-<
